--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
 
-        <script src="/scripts.js"></script>
+        <script src="scripts.js"></script>
 
         <a id='central-bloc'href='http://christogab.fr/home'>
         
